# spacerocks-sdl

./: .clang-format  .clang-tidy  .eslintrc.js  .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.md  game.data  game.html  game.js  game.wasm  index.html  package-lock.json  package.json  service-worker.js  site.webmanifest
assets/: README.md
assets/game/images/: README.md
assets/web/: index.html  service-worker.js  site.webmanifest
include/spacerocks/: assets.h  audio.h  bullet.h  debris.h  debug.h  font.h  game.h  graphics.h  input.h  language.h  lines.h  math.h  physics.h  renderer.h  rock.h  saucer.h  savefile.h  scoreboard.h  ship.h  transition.h  ui.h  util.h
src/: assets.c  audio.c  bullet.c  debris.c  font.c  game.c  graphics.c  input.c  language.c  lines.c  main.c  math.c  physics.c  renderer.c  rock.c  saucer.c  savefile.c  scoreboard.c  ship.c  transition.c  ui.c
src/apple/: Info.plist
src/emscripten/: shell.html
src/windows/: app.rc
tests/: lines.c  math.c  scoreboard.c
tools/: build-manual.js  build-website.js
